# petproject

./: .gitignore  .pre-commit-config.yaml  Dockerfile  cloudbuild.yaml  pyproject.toml
config/: loger_conf.yaml
src/: dto_models.py  logger.py  main.py  pet_db.py  router.py  service.py
tests/: test_main.py
