[project]
name = "Petproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "faker>=37.11.0",
    "fastapi[standart]>=0.120.0",
    "pre-commit>=4.3.0",
    "pyproject-parser>=0.13.0",
    "pyyaml>=6.0.3",
]
